Fix nav z-index

--- a/source/assets/stylesheets/main.css
+++ b/source/assets/stylesheets/main.css
@@ -1720,7 +1720,7 @@ ol, ul, li {
   display: flex;
   flex-direction: column;
   background-color: #252C38;
-  z-index: 2;
+  z-index: 3;
   overflow-x: hidden; }
   .ch-nav.collapsed {
     width: 60px;
